--- a/userfrontend/src/components/LoginPopup/LoginPopup.css
+++ b/userfrontend/src/components/LoginPopup/LoginPopup.css
@@ -5,8 +5,21 @@
   height:100%;
   background-color: #00000090;
   display:grid;
+  animation: fadeIn 0.3s ease-in-out;
+  
 }
 
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
 .login-popup-container{
   place-self: center;
   width: max(23vw,330px);
